--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.17.2",
-    "discord.js": "hydrabolt/discord.js#d6b276bc29ba1f9fe357287c7603899d022c0986",
+    "discord.js": "^11.3.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.4"
   }
